# mcp-data-fusion

./: .gitignore  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.md  TODO.md  pyproject.toml
examples/: crm_customer_merge.md  ecommerce_products.md  healthcare_matching.md
src/mcp_data_fusion/: __init__.py  __main__.py  server.py
src/mcp_data_fusion/resources/: __init__.py
src/mcp_data_fusion/tools/: __init__.py  analyze.py  export.py  ingest.py  match.py  normalize.py  virtual.py
src/mcp_data_fusion/utils/: __init__.py
