[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-data-fusion"
version = "0.1.0"
description = "Data engineering toolkit for Claude: normalize, match, fuse, validate datasets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arnaud Pasquier", email = "arnaud.pasquier@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["mcp", "data-engineering", "fuzzy-matching", "geocoding", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "thefuzz>=0.20.0",
    "python-Levenshtein>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/ysumatta/mcp-data-fusion"
Repository = "https://github.com/ysumatta/mcp-data-fusion"
Issues = "https://github.com/ysumatta/mcp-data-fusion/issues"
Documentation = "https://github.com/ysumatta/mcp-data-fusion/wiki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
